--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.8",
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
     "@intlify/unplugin-vue-i18n": "^0.12.2",
     "@types/node": "^20.4.4",
     "@types/nprogress": "^0.2.0",
